--- a/index.html
+++ b/index.html
@@ -34,6 +34,57 @@
             margin-top: 1%;
             text-align: center;
         }
+        .photo{
+            width: 400px;
+            height: 300px;
+            margin-left: 38%;
+            background-image: url(images/2.jpg);
+            background-position: center;
+            background-size: cover;
+            border-radius: 10px;
+        }
+        .photo1{
+            background-image: url(images/1.jpg);
+        }
+        .photo2{
+            background-image: url(images/2.jpg);
+        }
+        .photo3{
+            background-image: url(images/3.jpg);
+        }
+        .photo4{
+            background-image: url(images/4.jpg);
+        }
+        .photo5{
+            background-image: url(images/5.jpg);
+        }
+        .photo6{
+            background-image: url(images/6.jpg);
+        }
+        .photo7{
+            background-image: url(images/7.jpg);
+        }
+        .photo8{
+            background-image: url(images/8.jpg);
+        }
+        .photo9{
+            background-image: url(images/10.jpg);
+        }
+        .photo10{
+            background-image: url(images/11.jpg);
+        }
+        .photo11{
+            background-image: url(images/12.jpg);
+        }
+        .photo12{
+            background-image: url(images/13.jpg);
+        }
+        .photo13{
+            background-image: url(images/14.jpg);
+        }
+        .photo14{
+            background-image: url(images/9.jpg);
+        }
     </style>
 </head>
 <body>
@@ -56,55 +107,55 @@
     function text_out(){
         x = getRandomInt(1,14)
         if (x == 1) {
-            p.innerHTML = 'Тебя ждёт весёлый день';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo1 photo"></div>Тебя ждёт весёлый день';
         }
         if (x == 2) {
-            p.innerHTML = 'Твоё счастья начнётся только к вечеру';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo2 photo"></div>Твоё счастья начнётся только к вечеру';
         }
         if (x == 3) {
-            p.innerHTML = 'Ты сделаешь 80% своих планов';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo3 photo"></div>Ты сделаешь 80% своих планов';
         }
         if (x == 4) {
-            p.innerHTML = 'Сегодня ты получишь хорошую новость';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo2 photo"></div>Сегодня ты получишь хорошую новость';
         }
         if (x == 5) {
-            p.innerHTML = 'Жизнь прекрасно, а Лёня уебан';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo4 photo"></div>Жизнь прекрасно, а Лёня уебан';
         }
         if (x == 6) {
-            p.innerHTML = 'Сегодня отличный день для интегралов';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo5 photo"></div>Сегодня отличный день для интегралов';
         }
         if (x == 7) {
-            p.innerHTML = 'Good day to die';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo6 photo"></div>Good day to die';
         }
         if (x == 8) {
-            p.innerHTML = 'Солнце светит тем, что ебашит';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo7 photo"></div>Солнце светит тем, что ебашит';
         }
         if (x == 9) {
-            p.innerHTML = 'Этот день нужно просто пережить. Для этого нужно жить';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo14 photo"></div>Этот день нужно просто пережить. Для этого нужно жить';
         }
         if (x == 10) {
-            p.innerHTML = 'Если конец ужасен, значит, это ещё не конец';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo8 photo"></div>Если конец ужасен, значит, это ещё не конец';
         }
         if (x == 11) {
-            p.innerHTML = 'Ты переживала любой момент, который с тобой случался, переживёшь и этот';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo9 photo"></div>Ты переживала любой момент, который с тобой случался, переживёшь и этот';
         }
         if (x == 12) {
-            p.innerHTML = 'Рано или поздно всё будет хорошо. Сегодня - рано.';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo11 photo"></div>Рано или поздно всё будет хорошо. Сегодня - рано.';
         }
         if (x == 13) {
-            p.innerHTML = 'Тебе стоит больше запланимровать на сегодня, потому что все планы сбудутся';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo11 photo"></div>Тебе стоит больше запланимровать на сегодня, потому что все планы сбудутся';
         }
         if (x == 14) {
-            p.innerHTML = 'Делай не так, как правильно, делай так, как прикольно';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo10 photo"></div>Делай не так, как правильно, делай так, как прикольно';
         }
         if (x == 15) {
-            p.innerHTML = 'Каждая новая сложность на твоё пути - просто один шаг вперёд';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo12 photo"></div>Каждая новая сложность на твоё пути - просто один шаг вперёд';
         }
         if (x == 16) {
-            p.innerHTML = 'Рождённый ползать никак не может ходить';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo13 photo"></div>Рождённый ползать никак не может ходить';
         }
         if (x == 16) {
-            p.innerHTML = 'То, что не получится у тебя сегодня, обязательно получится завтра';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo14 photo"></div>То, что не получится у тебя сегодня, обязательно получится завтра';
         }
     }
 
