--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .photo{
             width: 400px;
             height: 300px;
-            margin-left: 38%;
+            margin: 0 auto;
             background-image: url(images/2.jpg);
             background-position: center;
             background-size: cover;
