--- a/index.html
+++ b/index.html
@@ -65,15 +65,18 @@
             background-image: url(images/7.jpg);
         }
         .photo8{
+            height: 180px;
             background-image: url(images/8.jpg);
         }
         .photo9{
             background-image: url(images/10.jpg);
         }
         .photo10{
+            height: 300px;
             background-image: url(images/11.jpg);
         }
         .photo11{
+            height: 300px;
             background-image: url(images/12.jpg);
         }
         .photo12{
@@ -83,6 +86,7 @@
             background-image: url(images/14.jpg);
         }
         .photo14{
+            height: 180px;
             background-image: url(images/9.jpg);
         }
     </style>
@@ -119,7 +123,7 @@
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo2 photo"></div>Сегодня ты получишь хорошую новость';
         }
         if (x == 5) {
-            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo4 photo"></div>Жизнь прекрасно, а Лёня уебан';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo4 photo"></div>Жизнь прекрасна, а Лёня уебан';
         }
         if (x == 6) {
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo5 photo"></div>Сегодня отличный день для интегралов';
@@ -128,7 +132,7 @@
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo6 photo"></div>Good day to die';
         }
         if (x == 8) {
-            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo7 photo"></div>Солнце светит тем, что ебашит';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo7 photo"></div>Солнце светит тем, кто ебашит';
         }
         if (x == 9) {
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo14 photo"></div>Этот день нужно просто пережить. Для этого нужно жить';
@@ -143,13 +147,13 @@
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo11 photo"></div>Рано или поздно всё будет хорошо. Сегодня - рано.';
         }
         if (x == 13) {
-            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo11 photo"></div>Тебе стоит больше запланимровать на сегодня, потому что все планы сбудутся';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo11 photo"></div>Тебе стоит больше запланировать на сегодня, потому что все планы сбудутся';
         }
         if (x == 14) {
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo10 photo"></div>Делай не так, как правильно, делай так, как прикольно';
         }
         if (x == 15) {
-            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo12 photo"></div>Каждая новая сложность на твоё пути - просто один шаг вперёд';
+            p.innerHTML = '<h3>Картинка дня</h3><div class = "photo12 photo"></div>Каждая новая сложность на твоём пути - просто один шаг вперёд';
         }
         if (x == 16) {
             p.innerHTML = '<h3>Картинка дня</h3><div class = "photo13 photo"></div>Рождённый ползать никак не может ходить';
